prevent image from stretching

--- a/src/globalStyles/config.scss
+++ b/src/globalStyles/config.scss
@@ -54,6 +54,7 @@
 @mixin image-with-aspect-ratio {
   position: relative;
   width: 100%;
+  height: 0;
   padding: 0;
   padding-top: calc(100% / var(--image-aspect-ratio));
   overflow: hidden;
